# Captain-EO

./: .gitignore  .gitmodules  .travis.yml  README.md  TODO.txt  configure.ac
scripts/: capture.sh  downward-upward-ramp.sh  good-bad-tracegen.sh  playback.sh  show-yuv.sh  show.sh
src/: Makefile.am
src/analysis/: rgb2y4m.py  run_analysis.py
src/barcoder/: Makefile.am  barcode-read-uyvy.cc  barcode-read.cc  barcode-write.cc  barcode.cc  barcode.hh  barcoder.cc  barcoder.cpp  barcoder.hh  main.cc  main.cpp  show
src/capture/: Capture.cc  Capture.cpp  Capture.h  Config.cc  Config.cpp  Config.hh  Makefile.am
src/decklink/: DeckLinkCapturer.cc  DeckLinkCapturer.hh  DeckLinkMixin.cc  DeckLinkMixin.hh  DeckLinkPlayer.cc  DeckLinkPlayer.hh  Makefile.am
src/display/: Makefile.am  display.cc  display.hh
src/examples/: Makefile.am
src/examples/analysis/: run_analysis.py
src/examples/barcoder/: Makefile.am  barcoder.cpp  barcoder.hh  main.cpp
src/examples/capture/: Capture.cpp  Capture.h  Config.cpp  Config.h  FrameTracker.hh  Makefile.am
src/examples/playback/: Config.cpp  Config.h  FrameTracker.hh  Makefile.am  Playback.cc  Playback.hh  TestPattern.cpp  TestPattern.h  read_timer.py
src/examples/rgb-example/: Makefile.am  rgb-example.cc
src/examples/scanner/: Makefile.am  Scanner.cpp  Scanner.hh  ScannerTest.cpp
src/examples/video-generator/: video-generator.py
src/playback/: Config.cpp  Config.h  Makefile.am  Playback.cc  Playback.hh
src/rgb-example/: Makefile.am  rgb-example.cc
src/scanner/: Makefile.am
src/tests/: Makefile.am  barcode-roundtrip.test  fetch-vectors.test
src/util/: Makefile.am  file.cc  system_runner.cc
